Fix all traffic widget label alignment.

--- a/assets/sass/widgets/_googlesitekit-widget-analyticsAllTraffic.scss
+++ b/assets/sass/widgets/_googlesitekit-widget-analyticsAllTraffic.scss
@@ -292,6 +292,11 @@
 		text-align: center;
 	}
 
+	.googlesitekit-widget--analyticsAllTraffic__legend .googlesitekit-cta-link__contents {
+		align-items: center;
+		display: inline-flex;
+	}
+
 	.googlesitekit-widget--analyticsAllTraffic__legend-slice {
 		align-items: center;
 		border-radius: 4px;
